--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,12 @@
     <string name="tab_albums">Albums</string>
     <string name="tab_playlists">Playlists</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
+    <string name="menu_settings">Settings</string>
+    <string name="menu_about">About</string>
+
     <string name="alert_need_permission">Permission Needed!</string>
     <string name="alert_need_permission_text">Permissions are required for this app. Please grant them. Closing App.</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
