--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -5,4 +5,13 @@
     <string name="tab_folders">Ordner</string>
     <string name="tab_playlists">Wiedergabelisten</string>
     <string name="tab_titles">Titel</string>
+    <string name="alert_need_permission">Berechtigungen benötigt!</string>
+    <string name="label_next">Nächster</string>
+    <string name="label_pause">Pause</string>
+    <string name="label_play">Abspielen</string>
+    <string name="label_prev">Vorheriger</string>
+    <string name="menu_about">Über</string>
+    <string name="menu_settings">Einstellungen</string>
+    <string name="search_hint">Nach Liedern Suchen</string>
+    <string name="alert_need_permission_text">Berechtigungen werden benötigt. Schließe App.</string>
 </resources>
