--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,11 @@
     <string name="tab_albums">Albums</string>
     <string name="tab_playlists">Playlists</string>
 
+    <string name="label_play">Play</string>
+    <string name="label_pause">Pause</string>
+    <string name="label_next">Next</string>
+    <string name="label_prev">Previous</string>
+
     <string name="menu_settings">Settings</string>
     <string name="menu_about">About</string>
 
@@ -13,6 +18,5 @@
     <string name="alert_need_permission_text">Permissions are required for this app. Please grant them. Closing App.</string>
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="search_hint">Search for Songs</string>
 </resources>
