--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -14,4 +14,16 @@
     <string name="menu_settings">Einstellungen</string>
     <string name="search_hint">Nach Liedern Suchen</string>
     <string name="alert_need_permission_text">Berechtigungen werden benötigt. Schließe App.</string>
+    <string name="rescan_library">Musikbibliothek neu einlesen</string>
+    <string name="artist_subtitle">%d Alben</string>
+    <string name="song_placeholder">Liedtitel</string>
+    <string name="artist_placeholder">Künstlername</string>
+    <string name="song_compact_placeholder">Liedtitel - Künstlername</string>
+    <string name="album_image_description">Album Bild</string>
+    <string name="album_placeholder">Albumtitel</string>
+    <string name="label_hide">Verstecken</string>
+    <string name="label_play_all">Alle abspielen</string>
+    <string name="label_repeat">Wiederholen</string>
+    <string name="label_shuffle">Mischen</string>
+    <string name="unknown_replacement">Unbekannt</string>
 </resources>
