--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,16 @@
     <string name="search_hint">Search for Songs</string>
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="rescan_library">Rescan Music Library</string>
+    <string name="artist_subtitle">%d Albums</string>
+    <string name="song_placeholder">Song Name</string>
+    <string name="artist_placeholder">Artist Name</string>
+    <string name="song_compact_placeholder">Song Title - Artist Name</string>
+    <string name="album_image_description">Album Image</string>
+    <string name="label_shuffle">Shuffle</string>
+    <string name="label_repeat">Repeat</string>
+    <string name="label_hide">Hide</string>
+    <string name="label_play_all">Play All</string>
+    <string name="album_placeholder">Album Title</string>
+    <string name="unknown_replacement">Unknown</string>
 </resources>
